kubernetes/bot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: seasidefm
  name: botsuro-twitch
  labels:
    app: botsuro-twitch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: botsuro-twitch
  template:
    metadata:
      labels:
        app: botsuro-twitch
    spec:
      containers:
        - name: botsuro-twitch
          # Add your own personal registry here
          image: registry.dougflynn.dev/botsuro:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
