kubernetes/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: botsuro
  name: botsuro-api
  labels:
    app: botsuro-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: botsuro-api
  template:
    metadata:
      labels:
        app: botsuro-api
    spec:
      containers:
        - name: botsuro-api
          image: registry.dougflynn.dev/botsuro-api
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: botsuro-api
  namespace: botsuro
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: botsuro-api
