kubernetes/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: botsuro
  namespace: botsuro
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: botsuro-api.seaside.fm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: botsuro-api
                port:
                  number: 80
    - host: botsuro.seaside.fm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: botsuro-api
                port:
                  number: 80
